# fitosim

./: .env.example  .gitignore  README.md  pyproject.toml  radiation.py
docs/: fitosim_calibration_manual.docx  fitosim_status_report.docx  fitosim_status_report_rev.1.docx  fitosim_status_report_rev.2.docx  fitosim_status_report_rev.3.docx  fitosim_synthesis_report.docx  fitosim_user_manual.docx
docs/scripts/: 01_build_status_report.js  02_build_new_chapters.py  03_insert_chapters_into_manual.py  04_manual_str_replaces.md  README.md
docs/uml/: fitosim_classes.dot  fitosim_packages.dot
examples/: annual_et0_decomposition_milan.py  basil_with_stress_coefficient.py  calibration_demo.py  dual_kc_demo.py  ecowitt_dashboard.py  history_bridge_demo.py  inventory_status_report.py  milan_monthly_et0.py  milan_monthly_radiation.py  monthly_radiation.py  multi_species_comparison.py  multi_species_ks_path.py  openmeteo_milan_demo.py  openmeteo_real_forecast.py  plots_balance_simulation.py  plots_validation.py  pot_characteristics_demo.py  saucer_demo.py  scheduler_demo.py  sensor_update_demo.py  sensors_integration_demo.py  substrate_comparison.py  substrate_mix_demo.py  tappa3_chemistry_demo.py  tappa4_complete_demo.py  tappa5_A_penman_monteith_demo.py  tappa5_B_selettore_demo.py  tappa5_C_garden_demo.py  tappa5_E_appartamento_demo.py  vaso_milano_14giorni.py
examples/gateway/esp32_arduino/: README.md  cache_layer.h  config.h.example  esp32_soil_gateway.ino  http_server_layer.h  modbus_layer.h
src/fitosim/domain/: alerts.py  garden.py  pot.py  room.py  scheduler.py  scheduling.py  species.py  weather.py
src/fitosim/io/: ecowitt.py  openmeteo.py  persistence.py  serialization.py
src/fitosim/science/: balance.py  calibration.py  dual_kc.py  et0.py  fertigation.py  (+6 more)
tests/: test_alerts.py  test_balance.py  test_calibration.py  test_demo_appartamento.py  test_dual_kc.py  test_ecowitt.py  test_et0.py  test_fertigation.py  test_garden.py  test_indoor.py  test_nutrition.py  test_openmeteo.py  test_persistence.py  test_pot.py  test_pot_physics.py  test_radiation.py  test_room.py  test_saucer.py  test_scheduler.py  test_scheduling.py  test_sensors_ecowitt.py  test_sensors_fixtures.py  test_sensors_http_json.py  test_sensors_openmeteo.py  test_sensors_types.py  test_serialization.py  test_species.py  test_substrate.py  test_weather.py
tests/fixtures/: ecowitt_history_sample.json  ecowitt_history_week.json  ecowitt_real_sample.json  ecowitt_real_time_sample.json
(+8 files in other folders)
